# restapi/projects_endpoints.go
@@ -6,6 +6,10 @@ import (
 	"gitlab.com/ulexxander/remoconf/storage"
 )
 
+// @Produce json
+// @Success 200 {object} []storage.Project
+// @Failure default {object} ResponseError
+// @Router /projects [get]
 func (h *Handler) getProjectsAll(w http.ResponseWriter, r *http.Request) {
 	res, err := h.projects.GetAll()
 	if err != nil {
@@ -15,7 +19,13 @@ func (h *Handler) getProjectsAll(w http.ResponseWriter, r *http.Request) {
 	h.resData(w, res)
 }
 
-func (h *Handler) postProject(w http.ResponseWriter, r *http.Request) {
+// @Accept json
+// @Produce json
+// @Param params body storage.ProjectCreateParams true "Project Create Params"
+// @Success 200 {object} storage.CreatedItem
+// @Failure default {object} ResponseError
+// @Router /projects [post]
+func (h *Handler) PostProject(w http.ResponseWriter, r *http.Request) {
 	var p storage.ProjectCreateParams
 	if err := bodyJSON(r, &p); err != nil {
 		h.resError(w, err)
